dnl 
dnl  KaarPux: http://kaarpux.kaarposoft.dk
dnl 

dnl
dnl autotools definitions for verify_toolchain
dnl

AC_INIT([toolchain], [0.0])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_MACRO_DIR([m4])
AM_PROG_AR()
LT_INIT()
AC_PROG_CC
AC_PROG_CXX
AM_PROG_CC_C_O
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
	Makefile
	toolchain/Makefile
])
AC_OUTPUT


